# documentation/swagger.yaml
@@ -265,6 +265,31 @@ paths:
           description: "Internal Error"
         403:
           $ref: '#/responses/UnauthorizedUserError'
+  /orders/delete/{Id}:  
+    patch:
+      tags:
+      - "Orders"
+      summary: "Find purchase order by ID, to delete it"
+      description: "An administrator can delete an order."
+      operationId: "deleteOrderById"
+      parameters:
+      - name: "Id"
+        in: "path"
+        description: "ID of order that needs to be fetched"
+        required: true
+        type: "integer"
+        maximum: 10.0
+        minimum: 1.0
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Order"
+        500:
+          description: "Internal Error"
+        403:
+          $ref: '#/responses/UnauthorizedUserError'
 
 definitions:
   User:
